<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fluxer</string>
    <string name="setup_title">Connect to a Fluxer Server</string>
    <string name="setup_subtitle">Enter the address of your Fluxer instance to get started.</string>
    <string name="label_server_url">Server URL</string>
    <string name="hint_server_url">https://chat.example.com</string>
    <string name="hint_examples">e.g. https://chat.example.com or http://192.168.1.10:3000</string>
    <string name="btn_connect">Connect</string>
</resources>
